samples/_failures_safe/1761564205_831295_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58d0f322.c: In function ‘print_distances’:
./samples/SAFE/__tmp_58d0f322.c:163:13: error: expected expression at end of input
  163 |             printf("Node %d: distance %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_58d0f322.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58d0f322.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58d0f322.c:163:13: error: expected declaration or statement at end of input
